﻿- Automatically create any missing skipfile directories and files when opening a specified skip file via the options panel


Version 1.0 -

- Support game version 1.15.1


Version 0.8.1.1 -

- Add null check to GetLoadQueue


Version 0.8.1 -

- Add check for subsidary road elevations if 'load used' is in effect and the primary road elevation isn't in use


Verion 0.8.0.1 hotfix -

- Implement workaround for unexpected CSUR Toolbox behaviour


Version 0.8 -

- Refactor skipping code (preparation for adding new skipping types)
- Replace now-redundant Harmony reverse patches with delegates
- Refactor CustomDeserializer


Version 0.7.1 -

- Add 'open skip file' button
- Update AlgernonCommons


Version 0.7 -

- Restore memory text color changes based on usage (Windows only)
- Add additional system peak use memory data in asset reports (Windows only)
- Add data tags in asset report for future Loading Order Mod use
- Add more curated background images (thanks to Teddy Radko)


Version 0.6.1 -

- Add support for new radio stations (Paradise Radio and Shoreline Radio)


Version 0.6 -

- Compatibility updates for game version 1.15


Version 0.5 -

- Automatically create new LSMR settings file after reading legacy LSM settings (don't wait for user to open options panel)
- Update display name in content manager and options panel (LSM -> Loading Screen Mod)
- Add failed and missing asset count display on loading screen
- Add more curated images (thanks? to LeaderOfTheMonkeys)
- Update API to restore GetMateral and GetMesh overloads with isLod parameter